--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#80229292</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimaryDark">#39000000</color>
+    <color name="colorAccent">#5d99b1</color>
+    <color name="black_overlay">#66000000</color>
+    <color name="light_font">#FBFBFB</color>
+    <color name="grey_font">#ff9e9e9e</color>
+    <color name="text_shadow">#7F000000</color>
+    <color name="text_shadow_white">#FFFFFF</color>
+
+    <color name="button_unclicked">#3231e1a7</color>
+    <color name="button_clicked">#325aa3cd</color>
 </resources>
