--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,7 +39,7 @@
                 android:orientation="vertical" >
 
                 <EditText
-                    android:id="@+id/editText"
+                    android:id="@+id/text_Username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -47,7 +47,7 @@
                     android:inputType="textPersonName" />
 
                 <EditText
-                    android:id="@+id/editText2"
+                    android:id="@+id/text_Password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
