--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,6 +53,13 @@
                     android:ems="10"
                     android:hint="Password"
                     android:inputType="textPassword" />
+
+                <Button
+                    android:id="@+id/btn_Login"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:onClick="login"
+                    android:text="Button" />
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
