--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.sdist.testingproject.LoginActivity">
+    tools:context="com.example.sdist.testingproject.SignUpActivity">
 
     <ScrollView
         android:layout_width="0dp"
@@ -71,7 +71,7 @@
                 android:layout_marginTop="8dp">
 
                 <EditText
-                    android:id="@+id/editText7"
+                    android:id="@+id/input_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -101,7 +101,7 @@
                 android:layout_marginBottom="8dp">
 
                 <EditText
-                    android:id="@+id/editText"
+                    android:id="@+id/input_birthday"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -115,10 +115,10 @@
                 android:id="@+id/btn_signup"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
                 android:layout_marginBottom="24dp"
+                android:layout_marginTop="24dp"
                 android:padding="12dp"
-                android:text="Create Account"/>
+                android:text="Create Account" />
 
             <TextView android:id="@+id/link_login"
                 android:layout_width="fill_parent"
