--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#4c8baf</color>
     <color name="colorPrimaryDark">#39000000</color>
     <color name="colorAccent">#5d99b1</color>
     <color name="black_overlay">#66000000</color>
