--- a/app/src/main/res/layout/content_homepage.xml
+++ b/app/src/main/res/layout/content_homepage.xml
@@ -45,11 +45,11 @@
                 android:layout_below="@+id/header_cover_image"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="-60dp"
-                android:background="@drawable/profile_circular_border_imageview"
+                android:background="@drawable/our_savior"
                 android:elevation="5dp"
                 android:padding="20dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/profile" />
+                android:src="@drawable/our_savior" />
 
             <RelativeLayout
                 android:id="@+id/profile_layout"
@@ -70,7 +70,7 @@
                     android:layout_marginLeft="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_toLeftOf="@+id/drop_down_option_menu"
-                    android:src="@drawable/ic_action_user_add" />
+                    android:src="@drawable/our_savior" />
 
                 <ImageView
                     android:id="@+id/drop_down_option_menu"
@@ -79,7 +79,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_marginLeft="16dp"
                     android:layout_marginTop="16dp"
-                    android:src="@drawable/ic_action_overflow" />
+                    android:src="@drawable/our_savior" />
 
                 <TextView
                     android:id="@+id/user_profile_name"
