--- a/app/src/main/res/layout/content_homepage.xml
+++ b/app/src/main/res/layout/content_homepage.xml
@@ -11,21 +11,23 @@
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
-        tools:layout_constraintLeft_creator="1"
         android:layout_marginBottom="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp">
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="MissingConstraints"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -35,8 +37,7 @@
                 android:id="@+id/header_cover_image"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/our_savior" />
+                android:scaleType="centerCrop"/>
 
             <ImageButton
                 android:id="@+id/user_profile_photo"
@@ -45,40 +46,21 @@
                 android:layout_below="@+id/header_cover_image"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="-60dp"
-                android:background="@drawable/our_savior"
+                android:background="@drawable/profile_circular_border_imageview"
                 android:elevation="5dp"
                 android:padding="20dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/our_savior" />
+                android:scaleType="centerCrop" />
 
             <RelativeLayout
                 android:id="@+id/profile_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/header_cover_image"
                 android:background="@drawable/side_nav_bar"
                 android:elevation="4dp"
-                android:paddingBottom="24dp"
-                android:layout_below="@+id/header_cover_image"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true">
-
-                <ImageView
-                    android:id="@+id/add_friend"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_toLeftOf="@+id/drop_down_option_menu"
-                    android:src="@drawable/our_savior" />
-
-                <ImageView
-                    android:id="@+id/drop_down_option_menu"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="16dp"
-                    android:src="@drawable/our_savior" />
+                android:paddingBottom="24dp">
 
                 <TextView
                     android:id="@+id/user_profile_name"
@@ -111,60 +93,91 @@
                 android:layout_marginTop="5dp"
                 android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:background="#fff"
-                    android:clickable="true"
-                    android:elevation="4dp"
-                    android:padding="20dp"
-                    android:text="Android Profile UI Design" />
+                <android.support.v7.widget.CardView
+                    android:id="@+id/android_card_view_example"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                <TextView
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_marginBottom="3dp"
-                    android:layout_marginTop="3dp"
-                    android:background="#fff"
-                    android:clickable="true"
-                    android:elevation="4dp"
-                    android:padding="20dp"
-                    android:text="Android Profile XMl UI Design" />
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#fff"
+                        android:elevation="4dp"
+                        android:padding="16dp">
 
-                <TextView
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:background="#fff"
-                    android:clickable="true"
-                    android:elevation="4dp"
-                    android:padding="20dp"
-                    android:text="Android Profile UI Design" />
+                        <ImageView
+                            android:id="@+id/cardview_image"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentTop="true"
+                            android:layout_marginRight="18dp"/>
 
-                <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_marginBottom="3dp"
-                    android:layout_marginTop="3dp"
-                    android:background="#fff"
-                    android:clickable="true"
-                    android:elevation="4dp"
-                    android:padding="20dp"
-                    android:text="Android Profile XMl UI Design" />
+                        <TextView
+                            android:id="@+id/cardview_list_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentTop="true"
+                            android:layout_toRightOf="@+id/cardview_image"
+                            android:paddingBottom="5dp"
+                            android:text="Viral Android"
+                            android:textSize="24sp" />
 
-                <TextView
-                    android:layout_width="fill_parent"
+                        <TextView
+                            android:id="@+id/short_description"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/cardview_list_title"
+                            android:layout_toRightOf="@+id/cardview_image"
+                            android:text="Free android tutorials and examples for beginners and expert."
+                            android:textColor="#8b8b8b" />
+
+                    </RelativeLayout>
+
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/android_card_view_example1"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:background="#fff"
-                    android:clickable="true"
-                    android:elevation="4dp"
-                    android:padding="20dp"
-                    android:text="Android Profile UI Design" />
+                    android:layout_marginTop="16dp">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#fff"
+                        android:elevation="4dp"
+                        android:padding="16dp">
+
+                        <ImageView
+                            android:id="@+id/cardview_image1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentTop="true"
+                            android:layout_marginRight="18dp"/>
+
+                        <TextView
+                            android:id="@+id/cardview_list_title1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentTop="true"
+                            android:layout_toRightOf="@+id/cardview_image1"
+                            android:paddingBottom="5dp"
+                            android:text="Viral Android"
+                            android:textSize="24sp" />
+
+                        <TextView
+                            android:id="@+id/short_description1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/cardview_list_title1"
+                            android:layout_toRightOf="@+id/cardview_image1"
+                            android:text="Free android tutorials and examples for beginners and expert."
+                            android:textColor="#8b8b8b" />
+
+                    </RelativeLayout>
+
+                </android.support.v7.widget.CardView>
+
             </LinearLayout>
         </RelativeLayout>
     </ScrollView>
