--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -93,6 +93,15 @@
                 app:srcCompat="@mipmap/back_arrow" />
 
             <ImageButton
+                android:id="@+id/btnFlash"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#ffffff"
+                app:srcCompat="@mipmap/flash_on" />
+
+            <ImageButton
                 android:id="@+id/btnCapture"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="match_parent"
