--- a/app/src/main/res/layout/story.xml
+++ b/app/src/main/res/layout/story.xml
@@ -13,6 +13,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/message_user"
-        android:textStyle="normal|bold" />
+        android:textStyle="normal|bold"
+        android:textSize="5dp"
+        android:paddingTop="3dip"
+        android:paddingBottom="3dip"/>
 
 </LinearLayout>
