--- a/app/src/main/res/layout/nav_header_homepage.xml
+++ b/app/src/main/res/layout/nav_header_homepage.xml
@@ -17,6 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:layout_weight="1"
         app:srcCompat="@android:drawable/sym_def_app_icon" />
 
     <TextView
@@ -24,12 +25,15 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="Username"
+        android:layout_weight="1"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="username@email.com" />
+        android:text="username@email.com"
+        android:layout_weight="1"
+        />
 
 </LinearLayout>
